Fixed spacing in experience section

--- a/css/experience.css
+++ b/css/experience.css
@@ -49,7 +49,6 @@
     margin-right: auto;
     font-weight: bold;
     font-size: 22px;
-    margin-left: 10px;
     display: block;
     color: rgb(53, 232, 200);
 }
@@ -60,7 +59,6 @@
     text-align: left;
     margin-right: auto;
     font-style: italic;
-    margin-left: 10px;
     margin-bottom: 4px;
     display: block;
     font-size: 18px;
@@ -71,7 +69,6 @@
 .job-date {
     opacity: 80%;
     font-size: 14px;
-    margin-left: 10px;
     display: block;
     text-align: left;
     color: rgb(202, 202, 202);
